RESOLVED FIXED80601
[BlackBerry] Fix cast-align warning in QuotesData.cpp
https://bugs.webkit.org/show_bug.cgi?id=80601
Summary [BlackBerry] Fix cast-align warning in QuotesData.cpp
Rob Buis
Reported 2012-03-08 08:45:56 PST
In static member function 'static WebCore::QuotesData* WebCore::QuotesData::create(int)': Source/WebCore/rendering/style/QuotesData.cpp:34:45: warning: cast from 'char*' to 'WebCore::QuotesData*' increases required alignment of target type [-Wcast-align]
Attachments
Patch (1.54 KB, patch)
2012-03-08 08:58 PST, Rob Buis
zimmermann: review+
Rob Buis
Comment 1 2012-03-08 08:58:31 PST
Nikolas Zimmermann
Comment 2 2012-03-13 08:49:01 PDT
Comment on attachment 130831 [details] Patch Looks sane.
Rob Buis
Comment 3 2012-03-13 09:23:38 PDT
Landed in 110571.
Note You need to log in before you can comment on or make changes to this bug.