[BlackBerry] Fix cast-align warning in QuotesData.cpp https://bugs.webkit.org/show_bug.cgi?id=80601

Reviewed by Nikolas Zimmermann.

Fix warning by adding variable of correct return type.

* rendering/style/QuotesData.cpp:
(WebCore::QuotesData::create):

Canonical link: https://commits.webkit.org/98148@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110571 268f45cc-cd09-0410-ab3c-d52691b4dbfc